deleted header active css styling and added positioning to drop down navigation to overlay on main tag

--- a/style.css
+++ b/style.css
@@ -55,10 +55,6 @@ ul li a {
     list-style-type: none;
     width: 100%;
     text-align: center;
+    position: fixed;
 }
-
-header.active {
-    height: auto;
-}
-
 
