restyled nav toggle button and sized front page sections

--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    height: auto;
     background-color: gray;
+    
 }
 
 header {
@@ -43,15 +47,16 @@ ul li a {
     flex-direction: column;
     justify-content: space-between;
     width: 25px;
-    height: 30px;
+    display: flex;
     padding: 5px 0 5px 0;
+    gap: 5px;
 }
 
 .nav-bar {
     height: 3px;
     width: 100%;
-    background-color: gray;
-    border-radius: 30px;
+    background-color: lightblue;
+    border-radius: 5px;
 }
 
 #nav-links.active {
@@ -67,5 +72,13 @@ ul li a {
     z-index: 0;
     pointer-events: auto;
     visibility: visible;
+}
+
+#hero-section {
+    height: 600px;
+}
+
+.home-sections {
+    height: 300px;
 }
 
