--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ main {
     display: flex;
     flex-direction: column;
     height: auto;
-    background-color: gray;
-    
 }
 
 header {
@@ -55,7 +53,8 @@ ul li a {
 .nav-bar {
     height: 3px;
     width: 100%;
-    background-color: lightblue;
+    background-color: #3fd6f0;
+;
     border-radius: 5px;
 }
 
@@ -72,13 +71,54 @@ ul li a {
     z-index: 0;
     pointer-events: auto;
     visibility: visible;
+    font-family: Nunito;
+    border-top: solid 1px #eef0f2;
+}
+
+section {
+    padding: 0 10px 0 10px;
 }
 
 #hero-section {
-    height: 600px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 40vh;
+    background-color: #eef0f2;
+    padding-top: 30px;
+    padding-bottom: 15px;
+}
+
+#hero-section h2 {
+    font-family: Montserrat;
+    font-size: 2.5rem;
+}
+
+#hero-section h3 {
+    font-size: 1rem;
+    font-family: Nunito;
+    margin-top: 10px;
+}
+
+#hero-section button {
+    width: 175px;
+    height: 60px;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #3fd6f0;
+    color: white;
+    border: none;
+}
+
+#hero-section button:hover {
+    background-color: #1fc5e2;
+;
 }
 
 .home-sections {
     height: 300px;
 }
+
+
 
