--- a/style.css
+++ b/style.css
@@ -187,6 +187,21 @@ section {
     letter-spacing: 0.5px;
 }
 
+footer {
+    display: grid;
+    background-color: #343a40;
+    color: white;
+}
+
+h4 {
+    font-size: 25px;
+}
+
+footer a {
+    color: white;
+    font-size: 20px;
+}
+
 
 
 
