--- a/style.css
+++ b/style.css
@@ -167,7 +167,9 @@ section {
 }
 
 #cta-section {
-    padding-top: 20px;
+    height: auto;
+    padding-top: 25px;
+    padding-bottom: 25px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -189,19 +191,28 @@ section {
 
 footer {
     display: grid;
+    grid-template-columns: 50% 50%;
     background-color: #343a40;
     color: white;
+    padding: 30px 25px 25px 25px;
+    font-family: Nunito;
+}
+
+.footer-section {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
 }
 
 h4 {
-    font-size: 25px;
+    font-size: 23px;
+    font-weight: 600;
+    margin-bottom: 5px;
 }
 
 footer a {
     color: white;
     font-size: 20px;
+    text-decoration: none;
+    font-weight: 200;
 }
-
-
-
-
