--- a/style.css
+++ b/style.css
@@ -93,8 +93,11 @@ li:has(> .nav-teams-link) {
 #nav-teams-list.teams-active {
     display: flex;
     flex-direction: column;
-    background-color: rgb(247, 245, 245);
+    background-color: rgba(235, 235, 235, 0.411);
     gap: 5px;
+    padding: 10px 0 10px 0;
+    border-top: solid 2px rgba(235, 235, 235, 0.63);
+    margin-top: 10px;
 }
 
 #nav-links.active a.nav-teams-link {
