--- a/style.css
+++ b/style.css
@@ -309,6 +309,8 @@ footer a {
     padding: 10px 15px 20px 15px;
     border-radius: 20px;
     margin-top: 50px;
+    min-height: 100px;
+    max-height: 600px;
 }
 
 .pricing-plan-title {
