--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ footer a {
     flex-direction: row;
     justify-content: center;
     margin-top: 40px;
+    margin-bottom: 25px;
     gap: 15px;
 }
 
@@ -303,12 +304,25 @@ footer a {
     background-color: rgb(217, 217, 217);
 }
 
+#pricing-discount {
+    font-family: Nunito;
+    font-size: 20px;
+    color: red;
+    text-align: center;
+    margin-top: 3px;
+}
+
+#card-section {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
 .pricing-card {
     font-family: Nunito;
     background-color: rgb(247, 245, 245);
     padding: 10px 15px 20px 15px;
     border-radius: 20px;
-    margin-top: 50px;
     min-height: 100px;
     max-height: 600px;
 }
