--- a/style.css
+++ b/style.css
@@ -305,14 +305,6 @@ footer a {
     background-color: rgb(217, 217, 217);
 }
 
-#pricing-discount {
-    font-family: Nunito;
-    font-size: 20px;
-    color: red;
-    text-align: center;
-    margin-top: 3px;
-}
-
 #card-section {
     display: flex;
     flex-direction: column;
@@ -393,6 +385,7 @@ footer a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .banner-title {
