--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ section {
     text-align: center;
     padding-top: 10px;
     background-color: #3fd6f0;
-    height: 150px;
+    min-height: 150px;
 }
 
 #testimonial-section {
@@ -229,6 +229,9 @@ footer {
     padding: 30px 25px 25px 25px;
     font-family: Nunito;
     border: none;
+    height: 100%;
+    width: 100%;
+    margin: 0;
 }
 
 .footer-section {
@@ -454,13 +457,15 @@ footer a {
 .team-cta {
     display: flex;
     flex-direction: column;
-    gap: 15px;
     align-items: center;
+    gap: 15px;
     background-color: #454b52;
     padding-bottom: 20px;
     padding-top: 18px;
     color: white;
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .team-cta-title {
