--- a/style.css
+++ b/style.css
@@ -221,6 +221,8 @@ section {
     letter-spacing: 0.5px;
 }
 
+/* Styling footer */
+
 footer {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -500,4 +502,41 @@ footer a {
     font-family: Nunito;
     font-size: 20px;
     text-align: center;
+}
+
+#enterprise-stats-section {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    background-color: #343a40;
+    font-family: Nunito;
+    padding: 15px 20px 20px 20px;
+    margin-top: 20px;
+    gap: 20px;
+}
+
+.stats-header {
+    font-size: 35px;
+    text-align: center;
+    font-weight: 300;
+}
+
+.enterprise-stats {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.stat-line {
+    font-size: 28px;
+    font-weight: 200;
+}
+
+#enterprise-cta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    padding-top: 18px;
+    gap: 15px;
 }
