deleted home page button styling

--- a/style.css
+++ b/style.css
@@ -132,19 +132,6 @@ section {
     margin-top: 10px;
 }
 
-#hero-section button {
-    width: 185px;
-    height: 70px;
-    border-radius: 25px;
-    font-size: 22px;
-    font-weight: bold;
-    background-color: #3fd6f0;
-    color: white;
-    border: none;
-    font-family: Nunito;
-    letter-spacing: 0.5px;
-}
-
 #hero-section button:hover {
     background-color: #1fc5e2;
 }
@@ -206,19 +193,6 @@ section {
     flex-direction: column;
     gap: 30px;
     align-items: center;
-}
-
-#cta-btn {
-    width: 185px;
-    height: 70px;
-    border-radius: 25px;
-    font-size: 22px;
-    font-weight: bold;
-    background-color: #3fd6f0;
-    color: white;
-    border: none;
-    font-family: Nunito;
-    letter-spacing: 0.5px;
 }
 
 /* Styling footer */
@@ -420,6 +394,7 @@ footer a {
     background-color: #3fd6f0;
     font-family: Nunito;
     font-size: 22px;
+    font-weight: 600;
 }
 
 .team-testimonial {
@@ -484,6 +459,7 @@ footer a {
     flex-direction: column;
     width: 100vw;
     gap: 20px;
+    margin-top: 40px;
 }
 
 #enterprise-features {
