--- a/style.css
+++ b/style.css
@@ -186,11 +186,29 @@ button:hover {
 }
 
 #get-app {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     font-family: Nunito;
     text-align: center;
-    padding-top: 10px;
+    padding: 25px 0;
     background-color: rgb(247, 245, 245);
-    height: 150px;
+}
+
+#get-app h3 {
+    font-size: 25px;
+}
+
+#app-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+}
+
+.app-img {
+    height: 50px;
+    width: auto;
 }
 
 #cta-section {
@@ -529,6 +547,9 @@ footer a {
 }
 
 /* Contact page stying */
+#contact-form-section {
+    padding-bottom: 20px;
+}
 
 #contact-info {
     padding-top: 30px;
@@ -544,5 +565,49 @@ footer a {
 
 #contact-info p {
     font-family: Nunito;
-    font-size: 25px;
+    font-size: 20px;
+}
+
+/* Form styling */
+
+form {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 10px;
+    padding-top: 5px;
+}
+
+#message {
+    grid-column: 1 / 3;
+}
+
+label {
+    font-family: Nunito;
+    font-size: 18px;
+}
+
+input {
+    width: 90%;
+    height: 40px;
+    border: solid 1px gray;
+    margin-top: 5px;
+}
+
+select {
+    border: solid 1px gray;
+    height: 40px;
+    width: 90%;
+    font-family: Nunito;
+    font-size: 18px;
+}
+
+option {
+    font-size: 15px;
+}
+
+textarea {
+    border: solid 1px gray;
+    width: 100%;
+    font-family: Nunito;
+    font-size: 18px;
 }
